# XFDTD_MODEL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  model_to_info.py  requirements.txt
cmake/: xfdtd_model-config.cmake.in
include/xfdtd_model/: exception.h  geometry.hpp  grid_model.hpp  model_object.hpp  model_shape.hpp  triangular_model_info.hpp
src/: CMakeLists.txt  main.cpp  model_scatter.cpp
src/include/: fdtd_model.hpp  geometry.hpp  model_shape.hpp
test/: CMakeLists.txt  fdtd_model_msh.cpp  model_scatter.cpp  read_triangular_surface_info.cpp
