cmake_minimum_required(VERSION 3.20)

project(XFDTD_MODEL VERSION 0.0.0 LANGUAGES CXX)

set(XFDTD_MODEL_MAIN_PROJECT OFF)
if(CMAKE_SOURCE_DIR STREQUAL PROJECT_SOURCE_DIR)
  set(XFDTD_MODEL_MAIN_PROJECT ON)
endif()

if(PROJECT_SOURCE_DIR STREQUAL PROJECT_BINARY_DIR)
    message(FATAL_ERROR "In-source builds are not allowed")
endif()

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

find_package(xfdtd_core REQUIRED)
find_package(xtensor REQUIRED)

message(STATUS ${xtensor_INCLUDE_DIRS})

add_subdirectory(src)