set(XFDTD_MODEL_PRIVATE_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include)

add_executable(read_triangular_surface_info read_triangular_surface_info.cpp)
target_include_directories(read_triangular_surface_info PUBLIC ${XFDTD_MODEL_PUBLIC_INCLUDE_DIRS})
target_link_libraries(read_triangular_surface_info xfdtd::xfdtd_core)

add_executable(fdtd_model_msh fdtd_model_msh.cpp)
target_include_directories(fdtd_model_msh PUBLIC ${XFDTD_MODEL_PUBLIC_INCLUDE_DIRS})
target_include_directories(fdtd_model_msh PRIVATE ${XFDTD_MODEL_PRIVATE_INCLUDE_DIRS})
target_link_libraries(fdtd_model_msh xfdtd::xfdtd_core)

add_executable(model_scatter model_scatter.cpp)
target_link_libraries(model_scatter PRIVATE xfdtd::xfdtd_core)
target_include_directories(model_scatter PRIVATE ${XFDTD_MODEL_PUBLIC_INCLUDE_DIRS})
